# yahtzee-simulator

./: .gitignore  LICENSE  README.md  analysis.ipynb  greedy_strategy.py  main.py  pyproject.toml  random_strategy.py  rules_based_strategy.py  strategies.py  strategy_utils.py  test.py  yahtzee.py
_archive/: yahtzee.py
scripts/strategies/: greedy_strategy.py  random_strategy.py  rules_based_strategy.py
scripts/utils/: constants.py  strategy_utils.py  yahtzee.py
templates/: uno_main.py
