[project]
name = "isye-6644"
version = "0.1.0"
description = ""
authors = [
    {name = "Katie Pruitt",email = "pruittkn@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "freesimplegui (>=5.2.0.post1,<6.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
