[project]
name = "isye-6644"
version = "0.1.0"
description = ""
authors = [
    {name = "Katie Pruitt",email = "pruittkn@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "freesimplegui (>=5.2.0.post1,<6.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "scipy (>=1.16.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"

